examples/test/testpolicy13104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13104
  namespace: namespace381
spec:
  podSelector:
    matchLabels:
      key1: value8
      key2: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value22
      podSelector:
        matchLabels:
          key15: value13
          key4: value31
          key0: value6
